--- a/mstech-jasatec2/views/report_mrp_jasatec.xml
+++ b/mstech-jasatec2/views/report_mrp_jasatec.xml
@@ -10,7 +10,7 @@
             <field name="print_report_name">'Informe Tecnico - %s.pdf' % (object.partner_id.registration_name or object.partner_id.name)</field>
             <field name="attachment">'Informe Tecnico - %s.pdf' % (object.partner_id.registration_name or object.partner_id.name)</field>
             <!--<field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_manager')])]"/> -->
-            <field name="binding_model_id" ref="model_mrp_production"/>
+            <field name="binding_model_id" ref="mrp.model_mrp_production"/>
             <field name="binding_view_types">report</field>
         </record>
     </data>
