--- a/mstech-jasatec2/views/report_mrp_jasatec.xml
+++ b/mstech-jasatec2/views/report_mrp_jasatec.xml
@@ -5,8 +5,8 @@
             <field name="name">Reporte OTM</field>
             <field name="model">mrp.production</field>
             <field name="report_type">qweb-pdf</field>
-            <field name="report_name">mstech-jasatec2.report_sale_contract</field>
-            <field name="report_file">mstech-jasatec2.report_sale_contract</field>
+            <field name="report_name">mstech-jasatec2.report_mrp_service</field>
+            <field name="report_file">mstech-jasatec2.report_mrp_service</field>
             <field name="print_report_name">'Informe Tecnico - %s.pdf' % (object.partner_id.registration_name or object.partner_id.name)</field>
             <field name="attachment">'Informe Tecnico - %s.pdf' % (object.partner_id.registration_name or object.partner_id.name)</field>
             <!--<field name="groups_id" eval="[(6, 0, [ref('sales_team.group_sale_manager')])]"/> -->
