--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -13,7 +13,7 @@
 							<div class="col h5">
 								<span><b>INFORME TECNICO N°<field name="id"/>-2021-JASATEC/AST</b></span>
 								<span>Cliente: <field name="partner_id"/></span>
-								<span><field name="partner_id.l10n_latam_identification_type_id.name"/>: <field name="partner_id.vat"/></span>
+								<span><field name="partner_id"/>: <field name="partner_id"/></span>
 							</div>
 						</div>
 					</page>
