--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -11,8 +11,8 @@
 					<page name="report_technical" string="Informe Tecnico">
 						<div class = "col-row text-center">
 							<div class="col h5">
-								<span><b>INFORME TECNICO N°<field name="id"/>-2021-JASATEC/AST</b></span>
-								<span>Cliente: <field name="partner_id"/></span>
+								<span><b>INFORME TECNICO N°<field name="id"/>-2021-JASATEC/AST</b></span><br/>
+								<span>Cliente: <field name="partner_id"/></span><br/>
 								<span><field name="partner_id"/>: <field name="partner_id"/></span>
 							</div>
 						</div>
