--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -18,7 +18,7 @@
 						</div>
 						<div class="row col">
 							<b>
-								<ol start="1" style="list-style-position:inside;">
+								<ol start="1">
 									<li><u>ANTECENDENTES</u></li>
 								</ol>
 							</b>
