--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -9,19 +9,19 @@
 			<data>
 				<xpath expr="//notebook" position="inside">
 					<page name="report_technical" string="Informe Tecnico">
-						<div class = "col-row text-center">
+						<div class="col-row text-center">
 							<div class="col h5">
 								<span><b>INFORME TECNICO N°<field name="id" readonly="1"/>-2021-JASATEC/AST</b></span><br/>
 								<span>Cliente: <field name="partner_id" readonly="1"/></span><br/>
 								<span><field name="partner_type_vat"/>: <field name="partner_number_vat" readonly="1"/></span>
 							</div>
 						</div>
-						<div class = "row col">
+						<div class="row col">
 							<span><b>1.ANTECEDENTES</b></span><br/>
 							<span> Por requerimiento de la empresa <field name="partner_id" readonly="1"/> con <field name="partner_type_vat" readonly="1"/> - <field name="partner_number_vat" readonly="1"/> 
-								se le remitió la Cotización N° <field name="sale_line_id" readonly="1">name</field>, de fecha <field name="sale_order_date">order_date</field> respecto al 
-								<field name="name"/> ubicados en la ciudad de <field name="partner_city"/>. Luego, durante el mes de __ nos indican 
-								que aceptan nuestra cotización y que se realizará el servicio en el mes de __. De inmediato nuestra empresa realizó las coordinaciones con el señor __,
+								se le remitió la Cotización N° <field name="sale_line_id" readonly="1">name</field>, de fecha <field name="sale_order_date" readonly="1"/> respecto al 
+								<field name="name"/> ubicados en la ciudad de <field name="partner_city"/>. Luego, nos indican que aceptan nuestra cotización y que se realizará el servicio en el 
+								mes de __. De inmediato nuestra empresa realizó las coordinaciones con __,
 								Gerente de __ y se programó el servicio técnico para el día __.
 							</span>
 						</div>
