--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -17,13 +17,23 @@
 							</div>
 						</div>
 						<div class="row col">
-							<span><b>1.ANTECEDENTES</b></span><br/>
+							<span><b><u>1. ANTECEDENTES</u></b></span><br/>
 							<span> Por requerimiento de la empresa <field name="partner_id" readonly="1"/> con <field name="partner_type_vat" readonly="1"/> - <field name="partner_number_vat" readonly="1"/> 
 								se le remitió la Cotización N° <field name="sale_line_id" readonly="1"/>, de fecha <field name="sale_order_date" readonly="1"/> respecto al 
 								<field name="name" readonly="1"/> ubicados en la ciudad de <field name="partner_city" readonly="1"/>.<br/>Luego, nos indican que aceptan nuestra cotización y que se realizará el servicio en el 
 								mes de __. De inmediato nuestra empresa realizó las coordinaciones con <field name="parent_res_contact"/>, <field name="parent_contact_function"/> de <field name="partner_id" readonly="1"/> 
 								y se programó el servicio técnico para el día <field name="planned_date_begin"/>.
 							</span>
+						</div>
+						<div class="row col">
+							<span><b><u>2. DATOS DEL SERVICIO</u></b></span><br/>
+							<span><b>2.1. Fecha y Lugar:</b></span>
+							<div class="especial-indent">
+								<span>El servicio de mantenimiento preventivo de <field name="name" readonly="1"/> se realizó los días <field name="planned_date_begin"/> al <field name="planned_date_end"/>,en las 
+									instalaciones de <field name="partner_id" readonly="1"/>, ubicada en <field name="partner_street" readonly="1"/> en la ciudad de <field name="partner_city" readonly="1"/>,
+									provincia de __, departamento de <field name="partner_province">.
+								</span>
+							</div>
 						</div>
 						
 						
