--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -26,8 +26,7 @@
 							</span>
 						</div>
 						<div class="row col">
-							<span><b><u>2. DATOS DEL SERVICIO</u></b></span><br/>
-							<span><b>2.1. Fecha y Lugar:</b></span>
+							<span><b><u>2. DATOS DEL SERVICIO</u><br/>2.1. Fecha y Lugar:</b></span>
 							<div class="especial-indent">
 								<span>El servicio de mantenimiento preventivo de <field name="name" readonly="1"/> se realizó los días <field name="planned_date_begin"/> al <field name="planned_date_end"/>,en las 
 									instalaciones de <field name="partner_id" readonly="1"/>, ubicada en <field name="partner_street" readonly="1"/> en la ciudad de <field name="partner_city" readonly="1"/>,
