--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -74,7 +74,13 @@
 								</tbody>
 							</table>
 						</div>
-						
+						<div class="col row">
+							<span><b><u>3. DESARROLLO DEL SERVICIO</u><br/>3.1. Se realizaron las siguientes actividades:</b></span><br/>
+							<field name="description" readonly="1"/>
+						</div>
+						<div class="row col">
+							<span><b><u>4. REGISTRO FOTOGRAFICO</u><br/>
+						</div>
 						
 					</page>
 				</xpath>
