--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -79,7 +79,7 @@
 							<field name="description" readonly="1"/>
 						</div>
 						<div class="row col">
-							<span><b><u>4. REGISTRO FOTOGRAFICO</u><br/>
+							<span><b><u>4. REGISTRO FOTOGRAFICO</u></b></span><br/>
 						</div>
 						
 					</page>
