--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -81,10 +81,10 @@
 							<field name="description" readonly="1"/>
 						</div>
 						<div class="row col">
-							<span><b><u>4. REGISTRO FOTOGRAFICO</u></b></span><br/>
+							<br/><span><b><u>4. REGISTRO FOTOGRAFICO</u></b></span><br/>
 						</div>
 						<div class="row col">
-							<span><b><u>5. CONCLUSIONES Y RECOMENDACIONES</u></b></span><br/>
+							<br/><span><b><u>5. CONCLUSIONES Y RECOMENDACIONES</u></b></span><br/>
 							<field name="description_conclusion"/>
 						</div>
 						
