--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -87,7 +87,7 @@
 							<br/><span><b><u>5. CONCLUSIONES Y RECOMENDACIONES</u></b></span><br/>
 							<field name="description_conclusion"/>
 						</div>
-						<div class="row col text-center">
+						<div class="row-col-md-4 text-center">
 							<field name="employee_signature" widget="signature"/>
 							<br/><span><b><field name="timesheets_employee_name"/></b></span><br/>
 						</div>
