--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -36,43 +36,47 @@
 						</div>
 						<div class="col row">
 							<span><br/><b>2.2. Personal tecnico:</b><br/></span>
-							<span>Para el presente servicio se asignó el personal técnico se detalla a continuación:</span>
-							<table class="table table-sm o_main_table">
-								<thead>
-									<tr>
-										<th name="th_number_pe" class="text-center">N°</th>
-										<th name="th_names" class="text-center">Apellidos y nombres</th>
-										<th name="th_dni" class="text-center"><field name="create_type_vat"/></th>
-										<th name="th_position" class="text-center">Cargo</th>
-									</tr>
-								</thead>
-								<tbody class="personal_tbody">
-									<td name="td_number_pe" class="text-center">1</td>
-									<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
-									<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
-									<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>
-								</tbody>
-							</table>
+							<div class="especial-indent">
+								<span>Para el presente servicio se asignó el personal técnico se detalla a continuación:</span>
+								<table class="table table-sm o_main_table">
+									<thead>
+										<tr>
+											<th name="th_number_pe" class="text-center">N°</th>
+											<th name="th_names" class="text-center">Apellidos y nombres</th>
+											<th name="th_dni" class="text-center"><field name="create_type_vat"/></th>
+											<th name="th_position" class="text-center">Cargo</th>
+										</tr>
+									</thead>
+									<tbody class="personal_tbody">
+										<td name="td_number_pe" class="text-center">1</td>
+										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
+										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
+										<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>
+									</tbody>
+								</table>
+							</div>
 						</div>
 						<div class="col row">
 							<span><br/><b>2.3. Equipamiento:</b><br/></span>
-							<span>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:</span>
-							<table class="table table-sm o_main_table">
-								<thead>
-									<tr>
-										<th name="th_number_eq" class="text-center">N°</th>
-										<th name="th_type_eq" class="text-center">Tipo, marca y modelo</th>
-										<th name="th_serial_eq" class="text-center">Serie</th>
-										<th name="th_features_eq" class="text-center">Caracteristicas</th>
-									</tr>
-								</thead>
-								<tbody class="personal_tbody">
-									<td name="td_number_eq" class="text-center">1</td>
-									<td name="td_type_eq" class="text-center"><field name="order_line_product"/></td>
-									<td name="td_serial_eq" class="text-center">__</td>
-									<td name="td_features_eq" class="text-center"><field name="order_line_product_desc"/></td>
-								</tbody>
-							</table>
+							<div class="especial-indent">
+								<span>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:</span>
+								<table class="table table-sm o_main_table">
+									<thead>
+										<tr>
+											<th name="th_number_eq" class="text-center">N°</th>
+											<th name="th_type_eq" class="text-center">Tipo, marca y modelo</th>
+											<th name="th_serial_eq" class="text-center">Serie</th>
+											<th name="th_features_eq" class="text-center">Caracteristicas</th>
+										</tr>
+									</thead>
+									<tbody class="personal_tbody">
+										<td name="td_number_eq" class="text-center">1</td>
+										<td name="td_type_eq" class="text-center"><field name="order_line_product"/></td>
+										<td name="td_serial_eq" class="text-center">__</td>
+										<td name="td_features_eq" class="text-center"><field name="order_line_product_desc"/></td>
+									</tbody>
+								</table>
+							</div>
 						</div>
 						<div class="col row">
 							<span><br/><b><u>3. DESARROLLO DEL SERVICIO</u></b><br/>Se realizaron las siguientes actividades:<br/></span>
