--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -34,7 +34,7 @@
 								</span>
 							</div>
 						</div>
-						<div class="col row">
+						<div class="row col">
 							<span><br/><b>2.2. Personal tecnico:</b><br/></span>
 							<div class="especial-indent">
 								<span>Para el presente servicio se asignó el personal técnico se detalla a continuación:</span>
@@ -56,7 +56,7 @@
 								</table>
 							</div>
 						</div>
-						<div class="col row">
+						<div class="row col">
 							<span><br/><b>2.3. Equipamiento:</b><br/></span>
 							<div class="especial-indent">
 								<span>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:</span>
