--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -40,7 +40,7 @@
 						<div class="row col">
 							<span><br/><b>2.2. Personal tecnico:</b><br/></span>
 							<div class="especial-indent">
-								<span>Para el presente servicio se asignó el personal técnico se detalla a continuación:</span>
+								<span><br/>Para el presente servicio se asignó el personal técnico se detalla a continuación:<br/></span>
 								<table class="table table-sm o_main_table">
 									<thead>
 										<tr>
@@ -62,7 +62,7 @@
 						<div class="row col">
 							<span><br/><b>2.3. Equipamiento:</b><br/></span>
 							<div class="especial-indent">
-								<span>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:</span>
+								<span><br/>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:<br/></span>
 								<table class="table table-sm o_main_table">
 									<thead>
 										<tr>
