--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -38,8 +38,7 @@
 							</div>
 						</div>
 						<div class="row col">
-							<span><br/><b>2.2. Personal tecnico:</b><br/></span>
-							<span><br/>Para el presente servicio se asignó el personal técnico se detalla a continuación:<br/></span>
+							<span><br/><b>2.2. Personal tecnico:</b><br/>Para el presente servicio se asignó el personal técnico se detalla a continuación:<br/></span>
 							<table class="table table-sm o_main_table">
 								<thead>
 									<tr>
@@ -58,8 +57,7 @@
 							</table>
 						</div>
 						<div class="row col">
-							<span><br/><b>2.3. Equipamiento:</b><br/></span>
-							<span><br/>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:<br/></span>
+							<span><br/><b>2.3. Equipamiento:</b><br/>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:<br/></span>
 							<table class="table table-sm o_main_table">
 								<thead>
 									<tr>
