--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -96,7 +96,7 @@
 						
 					</page>
 				</xpath>
-				<xpath expr="//notebook[@name='report_technical']" position="after">
+				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
 						<field name="herramientas_project" widget="many2many"/>
 					</page>
