--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -8,7 +8,7 @@
 		<field name="arch" type="xml">
 			<data>
 				<xpath expr="//field[@name='sale_line_id']" position="after">
-					<field name='state_payment_invoice' widget="badge"/>
+					<field name='state_payment_invoice' widget="badge" decoration-success="state_payment_invoice == 'paid'"/>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
