--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -57,7 +57,7 @@
 									</tr>
 								</thead>
 								<tbody class="personal_tbody">
-									<t t-foreach="timesheet_ids.employee_id" t-as="time_emplo">
+									<t t-foreach="timesheet_ids.id" t-as="time_emplo">
 										<!--<td name="td_number_pe" class="text-center"><span t-field="timesheet.id"/></td>
 										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
 										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
