--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -57,8 +57,8 @@
 									</tr>
 								</thead>
 								<tbody class="personal_tbody">
-									<t t-set="loop1" t-value="1"/>
-									<t t-foreach="timesheet_ids.id" t-as="loop1">
+									<!--<t t-set="loop1" t-value="1"/>-->
+									<t t-foreach="sale_line_id" t-as="loop1">
 										<!--<td name="td_number_pe" class="text-center"><span t-field="timesheet.id"/></td>
 										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
 										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
@@ -67,7 +67,7 @@
 										<td name="td_number2_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
 										<td name="td_number3_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
 										<td name="td_number4_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
-										<t t-set="loop1" t-value"loop1+1"/>
+										<!--<t t-set="loop1" t-value"loop1+1"/>-->
 									</t>
 								</tbody>
 							</table>
