--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -23,7 +23,7 @@
 						<div class="col-row text-center">
 							<div class="col h5">
 								<span><b>INFORME TECNICO N°<field name="id" readonly="1"/>-2021-JASATEC/AST</b></span><br/>
-								<span>Cliente: <field name="partner_id" readonly="1"/>-</span><span t-field="partner_id"/><br/>
+								<span>Cliente: <field name="partner_id" readonly="1"/>-</span><span t-field="self.partner_id"/><br/>
 								<span><field name="partner_type_vat"/>: <field name="partner_number_vat" readonly="1"/></span>
 							</div>
 						</div>
