--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -58,12 +58,12 @@
 								</thead>
 								<tbody class="personal_tbody">
 									<!--<t t-set="loop1" t-value="1"/>-->
-									<t t-foreach="sale_line_id" t-as="loop1">
-										<!--<td name="td_number_pe" class="text-center"><span t-field="timesheet.id"/></td>
+									<t t-foreach="timesheet_ids" t-as="loop1">
+										<td name="td_number_pe" class="text-center"><field name="loop1.id" readonly="1"/></td>
 										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
 										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
-										<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>-->
-										<td name="td_number1_pe" class="text-center"><span t-field="loop1.product"/></td>
+										<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>
+										<!--<td name="td_number1_pe" class="text-center"><span t-field="loop1.product"/></td>
 										<td name="td_number2_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
 										<td name="td_number3_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
 										<td name="td_number4_pe" class="text-center"><span t-field="time_emplo.display_name"/></td>
