--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -58,8 +58,8 @@
 								</thead>
 								<tbody class="personal_tbody row">
 									<!--<t t-set="loop1" t-value="1"/>-->
-									<t t-foreach="timesheet_ids" t-as="loop1">
-										<td name="td_number_pe" class="text-center"><t-field name="loop1.id" readonly="1"/></td>
+									<t t-foreach="[1,2,3]" t-as="loop1">
+										<td name="td_number_pe" class="text-center"><t-esc="loop1"/></td>
 										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
 										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
 										<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>
