--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -59,7 +59,7 @@
 								<tbody class="personal_tbody row">
 									<!--<t t-set="loop1" t-value="1"/>-->
 									<t t-foreach="[1,2,3]" t-as="loop1">
-										<td name="td_number_pe" class="text-center"><t-esc="loop1"/></td>
+										<td name="td_number_pe" class="text-center"><t t-esc="loop1"/></td>
 										<td name="td_names_pe" class="text-center"><field name="timesheets_employee_name"/></td>
 										<td name="td_dni_pe" class="text-center"><field name="timesheets_employee_number_ident"/></td>
 										<td name="td_position_pe" class="text-center"><field name="timesheets_employee_function"/></td>
