--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -65,7 +65,7 @@
 									</t>
 								</tbody>
 							</table>-->
-							<field name="timesheet.ids" readonly="1"/>
+							<field name="timesheet_ids" readonly="1"/>
 						</div>
 						<div class="row col">
 							<span><br/><b>2.3. Equipamiento:</b><br/>Los equipos a los que se realizó el servicio de mantenimiento preventivo son los que se indican a continuación:<br/></span>
