--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -65,7 +65,7 @@
 									</t>
 								</tbody>
 							</table>-->
-							<field name-"timesheets_employee"/>
+							<field name="timesheets_employee"/>
 							<field name="timesheet_ids" readonly="1"/>
 						</div>
 						<div class="row col">
