--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -80,7 +80,7 @@
 						<div class="row col">
 							<span><br/><b><u>4. REGISTRO FOTOGRAFICO</u></b><br/></span>
 						</div>
-						<field name="foto_ids" widget="many2many_binary_image" string="Adjuntar" nolabel="1"/>
+						<field name="foto_ids" widget="many2many_binary_image"/>
 						<div class="row col">
 							<span><br/><b><u>5. CONCLUSIONES Y RECOMENDACIONES</u></b><br/></span>
 							<field name="description_conclusion"/>
