--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -15,8 +15,9 @@
 						<div class="col">
 							<label for="herramientas_project"/>
 							<field name="herramientas_project" widget="many2many" domain="[('picking_type_code','=','internal'),('state','=','draft'),('company_id','=','partner_id.company_id')]"/>
-							<tree create="1" sample="0"/>
+								<tree create="1" sample="0"/>
 						</div>
+						<field name="move_interno"/>
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
