--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -12,12 +12,13 @@
 				</xpath>
 				<xpath expr="//notebook" position="inside">
 					<page name="herramientas_transfe" string="Herramientas">
-						<!--<div class="col">
-							<label for="herramientas_project"/>
+						<div class="col">
+							<!--<label for="herramientas_project"/>
 							<field name="herramientas_project" widget="many2many" domain="[('picking_type_code','=','internal'),('state','=','draft'),('company_id','=','partner_id.company_id')]"/>
-								<tree create="1" sample="0"/>
-						</div>-->
-						<field name="move_interno"/>
+								<tree create="1" sample="0"/> -->
+							<field name="move_interno"/>
+						</div>
+						
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
