--- a/mstech/views/view_project_task.xml
+++ b/mstech/views/view_project_task.xml
@@ -18,7 +18,7 @@
 								<tree create="1" sample="0"/> -->
 							<field name="move_interno"/>
 						</div>
-						
+						<field name="move_int_he"/>						
 					</page>
 				</xpath>
 				<xpath expr="//notebook" position="inside">
